ci: use lerna-changelog for release notes

--- a/.release-it.json
+++ b/.release-it.json
@@ -4,6 +4,7 @@
   },
   "github": {
     "release": true,
+    "releaseNotes": "npx lerna-changelog --from ${latestTag} --to ${newVersion}",
     "web": true
   }
 }
