--- a/.release-it.json
+++ b/.release-it.json
@@ -4,7 +4,7 @@
   },
   "github": {
     "release": true,
-    "releaseNotes": "npx lerna-changelog --from ${latestTag} --to ${newVersion}",
+    "releaseNotes": "npx lerna-changelog --from ${latestTag} --to ${tagName}",
     "web": true
   }
 }
