--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express": "4.21.1",
     "husky": "9.1.6",
     "jest": "29.7.0",
+    "lerna-changelog": "2.2.0",
     "lint-staged": "15.2.10",
     "openapi-types": "12.1.3",
     "prettier": "2.8.8",
