--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,11 @@
 {
   "semanticCommits": true,
-  "packageRules": [{
-    "depTypeList": ["devDependencies"],
-    "automerge": true
-  }],
-  "extends": [
-    "config:base"
-  ]
+  "packageRules": [
+    {
+      "depTypeList": ["devDependencies"],
+      "automerge": true
+    }
+  ],
+  "labels": ["dependencies"],
+  "extends": ["config:base"]
 }
