--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "@nestjs/mapped-types": "2.0.6",
     "js-yaml": "4.1.0",
     "lodash": "4.17.21",
-    "path-to-regexp": "3.3.0",
+    "path-to-regexp": "^8.2.0",
     "swagger-ui-dist": "5.18.2"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-angular": "19.5.0",
-    "@fastify/static": "7.0.4",
+    "@fastify/static": "^8.0.3",
     "@nestjs/common": "10.4.7",
-    "@nestjs/core": "10.4.7",
-    "@nestjs/platform-express": "10.4.7",
-    "@nestjs/platform-fastify": "10.4.7",
+    "@nestjs/core": "^11.0.0-next.2",
+    "@nestjs/platform-express": "^11.0.0-next.2",
+    "@nestjs/platform-fastify": "^11.0.0-next.2",
     "@types/jest": "29.5.14",
     "@types/js-yaml": "4.0.9",
     "@types/lodash": "4.17.13",
@@ -50,7 +50,8 @@
     "eslint": "9.14.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.31.0",
-    "express": "4.21.1",
+    "express": "^5.0.1",
+    "fastify": "^5.1.0",
     "husky": "9.1.6",
     "jest": "29.7.0",
     "lerna-changelog": "2.2.0",
@@ -67,7 +68,7 @@
   "peerDependencies": {
     "@fastify/static": "^6.0.0 || ^7.0.0",
     "@nestjs/common": "^9.0.0 || ^10.0.0",
-    "@nestjs/core": "^9.0.0 || ^10.0.0",
+    "@nestjs/core": "^11.0.0-next.1",
     "class-transformer": "*",
     "class-validator": "*",
     "reflect-metadata": "^0.1.12 || ^0.2.0"
