--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ aliases:
   - &install-deps
     run:
       name: Install dependencies
-      command: npm ci --ignore-scripts
+      command: npm ci --ignore-scripts --legacy-peer-deps
   - &build-packages
     run:
       name: Build
@@ -35,7 +35,7 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: Install dependencies
-          command: npm ci --ignore-scripts
+          command: npm ci --ignore-scripts --legacy-peer-deps
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
