--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs/swagger",
-  "version": "8.1.1",
+  "version": "11.0.0-next.1",
   "description": "Nest - modern, fast, powerful node.js web framework (@swagger)",
   "author": "Kamil Mysliwiec",
   "license": "MIT",
@@ -35,10 +35,10 @@
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-angular": "19.7.0",
     "@fastify/static": "8.0.3",
-    "@nestjs/common": "^11.0.0",
-    "@nestjs/core": "^11.0.0",
-    "@nestjs/platform-express": "^11.0.0",
-    "@nestjs/platform-fastify": "^11.0.0",
+    "@nestjs/common": "^11.0.1",
+    "@nestjs/core": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-fastify": "^11.0.1",
     "@types/jest": "29.5.14",
     "@types/js-yaml": "4.0.9",
     "@types/lodash": "4.17.14",
@@ -67,8 +67,8 @@
   },
   "peerDependencies": {
     "@fastify/static": "^8.0.0",
-    "@nestjs/common": "^11.0.0",
-    "@nestjs/core": "^11.0.0",
+    "@nestjs/common": "^11.0.1",
+    "@nestjs/core": "^11.0.1",
     "class-transformer": "*",
     "class-validator": "*",
     "reflect-metadata": "^0.1.12 || ^0.2.0"
