chore: upgrade to eslint v9

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-angular": "19.7.0",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.18.0",
     "@fastify/static": "8.0.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
@@ -43,13 +45,12 @@
     "@types/js-yaml": "4.0.9",
     "@types/lodash": "4.17.14",
     "@types/node": "22.10.7",
-    "@typescript-eslint/eslint-plugin": "8.20.0",
-    "@typescript-eslint/parser": "8.20.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "eslint": "9.18.0",
     "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "5.2.3",
+    "globals": "15.14.0",
     "express": "5.0.1",
     "fastify": "5.2.1",
     "husky": "9.1.7",
@@ -57,13 +58,15 @@
     "lerna-changelog": "2.2.0",
     "lint-staged": "15.4.1",
     "openapi-types": "12.1.3",
-    "prettier": "2.8.8",
+    "prettier": "3.4.2",
+    "prettier-v2": "npm:prettier@2.8.8",
     "reflect-metadata": "0.2.2",
     "release-it": "18.1.1",
     "supertest": "7.0.0",
     "swagger-parser": "10.0.3",
     "ts-jest": "29.2.5",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.20.0"
   },
   "peerDependencies": {
     "@fastify/static": "^8.0.0",
