--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "@eslint/eslintrc": "3.3.0",
     "@eslint/js": "9.22.0",
     "@fastify/static": "8.1.1",
-    "@nestjs/common": "^11.0.1",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.1",
-    "@nestjs/platform-fastify": "^11.0.1",
+    "@nestjs/common": "11.0.12",
+    "@nestjs/core": "11.0.12",
+    "@nestjs/platform-express": "11.0.12",
+    "@nestjs/platform-fastify": "11.0.12",
     "@types/jest": "29.5.14",
     "@types/js-yaml": "4.0.9",
     "@types/lodash": "4.17.16",
@@ -50,9 +50,9 @@
     "eslint": "9.22.0",
     "eslint-config-prettier": "10.1.1",
     "eslint-plugin-prettier": "5.2.3",
-    "globals": "16.0.0",
     "express": "5.0.1",
     "fastify": "5.2.1",
+    "globals": "16.0.0",
     "husky": "9.1.7",
     "jest": "29.7.0",
     "lerna-changelog": "2.2.0",
