--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@microsoft/tsdoc": "0.15.1",
     "@nestjs/mapped-types": "2.1.0",
     "js-yaml": "4.1.0",
-    "lodash": "4.17.21",
+    "es-toolkit": "1.39.5",
     "path-to-regexp": "8.2.0",
     "swagger-ui-dist": "5.21.0"
   },
@@ -46,7 +46,6 @@
     "@nestjs/platform-fastify": "11.1.3",
     "@types/jest": "30.0.0",
     "@types/js-yaml": "4.0.9",
-    "@types/lodash": "4.17.19",
     "@types/node": "22.15.34",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
