--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@TomSpott/nestjs-swagger-fork",
+  "name": "@nestjs/swagger",
   "version": "11.2.1",
   "description": "Nest - modern, fast, powerful node.js web framework (@swagger)",
   "author": "Kamil Mysliwiec",
   "license": "MIT",
-  "repository": "https://github.com/TomSpott/swagger-fork",
+  "repository": "https://github.com/nestjs/swagger",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
