--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-yaml": "4.1.1",
     "lodash": "4.17.23",
     "path-to-regexp": "8.3.0",
+    "smol-toml": "^1.6.0",
     "swagger-ui-dist": "5.31.0"
   },
   "devDependencies": {
